--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,7 +1,7 @@
-
-body{
+body {
   margin-top: 120px;
 }
+
 html {
   margin: 0;
   padding: 0;
@@ -20,7 +20,7 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1px 20x;
+  padding: 1px 20px; /* 수정된 부분: 20x가 아니라 20px로 수정 */
   background-color: rgb(247, 239, 239);
   width: 100%;
   box-sizing: border-box;
@@ -29,8 +29,6 @@ html {
 
 .logo {
   font-size: 24px;
-  
-  
 }
 
 .nav-container {
@@ -51,12 +49,6 @@ nav li {
   font-size: 15px;
 }
 
-.auth-buttons {
-  display: flex;
-  gap: 10px;
-  
-}
-
 .logo {
   font-size: 0;
 }
@@ -65,22 +57,40 @@ nav li {
   width: 80px;
   height: auto;
 }
+
 @media (max-width: 960px) {
   .nav-container {
     display: none; 
   }
 }
 
-.nav-container ul li{
+.nav-container ul li {
   font-size: 15px;
   font-weight: bold;
   padding-left: 66px;
 }
-.auth-buttons button{
+
+.auth-buttons {
+  display: flex;
+  gap: 10px;
+  position: relative;
+}
+
+.auth-buttons::before {
+  content: ''; /* 내용 없음 */
+  border-left: 1px solid #ccc;
+  height: 15px;
+  position: absolute; /* 수정된 부분: position 속성 추가 */
+  right: 53%; /* 수정된 부분: 가운데 정렬 */
+  top: 50%; /* 수정된 부분: 가운데 정렬 */
+  transform: translateY(-50%); /* 수정된 부분: 세로 가운데 정렬 */
+}
+
+
+.auth-buttons button {
   background-color: rgb(247, 239, 239);
   border-radius: 20px;
   font-size: 15px;
-  
 }
 
 .dropdown-overlay {
@@ -99,5 +109,4 @@ nav li {
   padding: 10px;
   border: 1px solid #ccc;
   z-index: 3;
- 
 }
