--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,10 +1,9 @@
 .footer-container {
-    position: relative;
-    bottom: 0;
+    position: absolute;
+    bottom: -60px;
     width: 100%;
     background-color: #f8f8f8;
     padding: 30px;
     text-align: left;
-    margin-top: auto;
   }
   
