--- a/src/css/MyInfo.css
+++ b/src/css/MyInfo.css
@@ -1,23 +1,26 @@
  .myinfo-container {
      margin-top: -100px;
      background-color: white;
-     width: 750%;
+     width: 1200px;
      height: 730px;
      max-width: 1200px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  }
 
- @media only screen and (max-width: 100px) {
-     .myinfo-container {
-         width: 180%;
-     }
- }
+ @media only screen and (max-width: 1100px) {
+    .myinfo-container {
+        width: 130%;
+    }
 
- @media only screen and (max-width: 600px) {
-     .myinfo-container {
-         width: 300%;
-     }
- }
+    .myinfo-context-container input {
+        width: 100%;
+        margin-right: 0;
+    } 
+}
 
  .myinfo-title {
      margin-bottom: 10px;
@@ -26,7 +29,6 @@
  .myinfo-title strong {
      text-align: left;
      font-size: 38px;
-     font-weight: bold;
      margin-left: 40px;
      font-weight: bolder;
  }
