--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -21,8 +21,10 @@ html {
   justify-content: space-between;
   align-items: center;
   padding: 1px 20px; /* 수정된 부분: 20x가 아니라 20px로 수정 */
-  background-color: rgb(247, 239, 239);
+  background-color:#1877F2;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
   width: 100%;
+  height: 100px;
   box-sizing: border-box;
   z-index: 1000;
 }
@@ -48,13 +50,19 @@ nav li {
   padding-left: 30px;
   font-size: 15px;
 }
-
 .logo {
-  font-size: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;
+}
+.logo span{
+  color: white;
+  font-size: 20px;
 }
 
 .logo img {
-  width: 80px;
+  width: 50px;
   height: auto;
 }
 
@@ -88,9 +96,9 @@ nav li {
 
 
 .auth-buttons button {
-  background-color: rgb(247, 239, 239);
+  background-color: transparent;
   border-radius: 20px;
-  font-size: 15px;
+  font-size: 12px;
 }
 
 .dropdown-overlay {
@@ -109,4 +117,13 @@ nav li {
   padding: 10px;
   border: 1px solid #ccc;
   z-index: 3;
+}
+
+a {
+  color: white;
+  font-size: 16px;
+}
+
+a:hover {
+  color:lightgray;
 }
