--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,4 +1,4 @@
-.footer-container {
+/* .footer-container {
     position: absolute;
     bottom: -60px;
     width: 100%;
@@ -6,4 +6,4 @@
     padding: 30px;
     text-align: left;
   }
-  
+   */
