--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -20,18 +20,19 @@ html {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1px 20px; /* 수정된 부분: 20x가 아니라 20px로 수정 */
-  background-color: rgb(247, 239, 239);
+  padding: 8px 30px; 
+  background-color: rgb(255, 255, 255);
   width: 100%;
   box-sizing: border-box;
   z-index: 1000;
+  border-radius: 6px;
+  border-bottom: 1px solid #b8b7b7;
+  
 }
 
-.logo {
-  font-size: 24px;
-}
 
 .nav-container {
+  margin-right: 20%;
   flex: 1;
 }
 
@@ -50,7 +51,7 @@ nav li {
 }
 
 .logo {
-  font-size: 0;
+    margin-left: 12%;
 }
 
 .logo img {
@@ -65,9 +66,10 @@ nav li {
 }
 
 .nav-container ul li {
-  font-size: 15px;
+  font-size: 17px;
   font-weight: bold;
   padding-left: 66px;
+  
 }
 
 .auth-buttons {
@@ -76,21 +78,22 @@ nav li {
   position: relative;
 }
 
-.auth-buttons::before {
-  content: ''; /* 내용 없음 */
+/* .auth-buttons::before {
+  content: ''; 
   border-left: 1px solid #ccc;
   height: 15px;
-  position: absolute; /* 수정된 부분: position 속성 추가 */
-  right: 53%; /* 수정된 부분: 가운데 정렬 */
-  top: 50%; /* 수정된 부분: 가운데 정렬 */
-  transform: translateY(-50%); /* 수정된 부분: 세로 가운데 정렬 */
-}
+  position: absolute;
+  right: 53%; 
+  top: 50%; 
+  transform: translateY(-50%); 
+} */
 
 
 .auth-buttons button {
-  background-color: rgb(247, 239, 239);
-  border-radius: 20px;
-  font-size: 15px;
+  background-color: #ffffff;
+  border-radius: 15px;
+  font-size: 13px;
+  border: 1px solid #d1d1d1;
 }
 
 .dropdown-overlay {
@@ -99,7 +102,7 @@ nav li {
   left: 0;
   width: 100%;
   height: 33%;
-  background-color: rgba(25, 138, 63, 0.3); 
+  background-color: rgba(3, 3, 83, 0.3); 
   z-index: 2; 
 }
 
@@ -109,4 +112,27 @@ nav li {
   padding: 10px;
   border: 1px solid #ccc;
   z-index: 3;
+  
 }
+
+.qna-navigation {
+  display: flex; 
+  flex-direction: column; 
+}
+
+.qna-nav-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.qna-nav-item {
+  padding: 10px 15px;
+  background-color: #f2f2f2;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+
+
+
