--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,28 +1,64 @@
+.main-container {
+  text-align: center; 
+  margin-top: 2%; 
+}
+.section-description {
+  margin-top: 2%; 
+  margin-bottom: 1%;
+}
 
-.section {
-    position: relative;
-    text-align: center;
-    margin-bottom: 20px;
-  }
+.button-container {
+  margin-top: 2%; 
+
+}
+.mainbtt {
+  background-color: #ffffff;
+  padding: 10px 5% 10px 5%; 
+  border: 1px solid #848383;
+  border-radius: 5px; 
+  width: fit-content;
+  margin: 0 auto;
+}
+
+.button-container button {
+  margin: 5px; 
+  padding: 10px 20px; 
+  font-size: 16px; 
+  border: 1px solid #ffffff; 
+  border-radius: 5px; 
+  background-color: #ffffff;
+  cursor: pointer; 
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.button-container button:hover {
+  color: #6b5e5e;
+}
+.button-container button.active {
+
+  color: #6b5e5e;
+  border: 1px solid #ffffff;
+}
+.sul1 {
+  width: 80%; 
+  padding: 1% 10% 1% 10%; 
+  background-color: rgb(240, 239, 239);
+  color: rgb(0, 0, 0);
   
-  .section img {
-    width: 100%;
-    height: 700px;
-    border-radius: 8px;
-  }
+  margin: 0 auto; 
   
-  .section button {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(187, 216, 59);
-    color: #fff;
-    padding: 10px 20px; 
-    font-size: 16px;
-    border: none; 
-    border-radius: 60px;
-    cursor: pointer;
-  }
+}
+.sul2 {
+  width: 39%; 
+  padding: 1% 10% 1% 10%; 
+  background-color: rgb(240, 239, 239);
+  color: rgb(0, 0, 0);
+  margin: 0 auto; 
   
- 
+}
+
+.sul11{
+  font-weight: bold;
+}
