--- a/src/css/Cmslogin.css
+++ b/src/css/Cmslogin.css
@@ -3,8 +3,8 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 100%;
-    margin-bottom: 50px;
+    width: 500px;
+    margin: auto;
     padding-top: 15px;
 
   }
@@ -15,15 +15,13 @@
 
   }
   
-
   h2 {
     text-align: center;
   }
-
+  
   .row {
     display: flex;
     justify-content: center;
-    margin-left: 39%;
   }
   
   .login-box {
@@ -91,4 +89,5 @@
   .findPd{
     padding-left: 10px;
   }
+  
   
