--- a/src/css/Section.css
+++ b/src/css/Section.css
@@ -9,7 +9,7 @@
 }
 
 
-
+/* nav */
 .nav-pills-step {
   display: flex;
   list-style: none;
@@ -41,17 +41,15 @@
   justify-content: center;
   text-align: center;
   height: 100vh;
-}
+} 
+
+
 .pscheck-box1{
   padding-bottom: 15px;
   font-size: 15px;
   font-weight: bold;
 }
-.pscheck-box2{
-  padding: 15px;
-  font-size: 15px;
-  font-weight: bold;
-}
+
 
 .pschecks{
   color: red;
@@ -71,42 +69,4 @@
   font-weight: bold;
 }
 
-/* Section2 */
-.section2-title{
-  border-bottom: 2px solid rgb(122, 120, 120);
-  padding-bottom: 15px;
-  font-size: 30px;
-  font-weight: bold;
-}
 
-.signup-info {
-  width: 500px;
-  margin: auto;
-  text-align: left;
-}
-
-.signup-info span{
-  font-size: 25px;
-  
-}
-
-.signup-info div{
-   border-bottom: 1px solid rgb(122, 120, 120);
-  padding-bottom: 12px;
-}
-
-.label-id input {
-  width: 250px;
-  height: 25px;
-  border: none; 
-  border-bottom: 1px solid #ccc; 
-  background: none; 
-  outline: none; 
-}
-
-.input-button{
-  width: 300px;
-  height: 30px;
-  background-color: #deb1d7;
-  border-radius: 4px;
-}
