--- a/src/css/Cms.css
+++ b/src/css/Cms.css
@@ -1,5 +1,6 @@
 .cms-container {
   display: flex;
+  flex-direction: column;
 }
 
 .sidebar {
@@ -46,14 +47,172 @@ th:last-child {
   height: 1.5em;
 }
 
+.Cmss-content{
+  margin: 2.5% auto 10px; 
+  width: 80%;
+  margin-left: 55%;
+}
 
+.Cmss-content th {
+  font-weight: bold; 
+  font-size: 1px; 
+}
 
-
-
-
-
-
-
-
-
+.Cmss-content td {
+  font-size: 20px; 
   
+}
+
+
+.Cmss-content table {
+  table-layout: fixed; 
+  width: 100%;
+  border-collapse: collapse; 
+  margin-left: -450px;
+}
+
+.Cmss-content th,
+.Cmss-content td {
+  padding: 1px; 
+  text-align: center; 
+  border: none; 
+}
+
+.Cmss-content th {
+  background-color: #ffffff; 
+}
+
+
+.Cmss-content td {
+  border-top: 1px solid #ddd; 
+}
+
+.Cmss-content tr:last-child td {
+  border-bottom: 2px solid #ddd; 
+}
+
+.Cmss-content th{
+  border-top: 3px solid #000000; 
+  font-size: 24px;
+  padding: 20px;
+}
+
+.Cmss-pagecon{
+  width: 100%;
+
+}
+.Cmss-pagebtt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+  margin-right: 83%;
+}
+
+.Cmss-pagebtt button {
+  margin: 10px 5px;
+  padding: 7px 20px;
+  background-color: #71bdf3;
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  cursor: pointer;
+  
+}
+
+.Cmss-pagebtt button:hover {
+  background-color: #686666;
+}
+
+
+
+.Cmss-options .Cmss-select {
+  
+  font-size: 16px; 
+  margin-right: 10px; 
+  border-radius: 10px;
+}
+
+.Cmss-options .Cmss-search {
+  font-size: 16px;
+  padding: 10px;
+  width: 450px; 
+  border-radius: 4px;
+  border: 1px solid rgb(139, 139, 139);
+}
+.Cmss-options{
+  display: flex;
+  width: 100%;
+  height: 100%;
+  margin-top: 3%;
+  margin-left: 28%;
+}
+.Cmss-header {
+  margin-left: 30%; 
+  text-align: center;
+}
+.Cmss-button{
+  background: #71bdf3;
+  padding: 6px 15px;
+  font-size: 18px;
+  border-radius: 7px;
+  margin-left: 10px;
+}
+
+.Cmss-chch{
+  margin-top: 5%;
+  margin-left: 0%;
+}
+
+.Cmss-header {
+  width: 100%;
+  margin-left: 130px; 
+  text-align: center;
+}
+.chchbtt{
+  background: #ffffff;
+  color: #282727;
+  padding: 12px 30px;
+  font-size: 22px;
+  margin-left: 0.5%;
+  border: 1px solid #868484;
+}
+.chchbtt1{
+  background: #71bdf3;
+  color: #282727;
+  padding: 12px 30px;
+  font-size: 22px;
+  margin-left: 0.5%;
+  border: 1px solid #868484;
+}
+
+.cms-FAQ{
+  margin: 1% 0 0 70%;
+  background: #71bdf3;
+  color: #ffffff;
+}
+.selected-post{
+  margin: 1%;
+  padding: 1% 0 2% 0;
+  background-color: rgb(209, 209, 209);
+  border-radius: 8px;
+}
+
+.sang-title , .sang-description{
+  margin: 30px 20px 10px 20px;
+  padding: 15px 0 15px 30px;
+  text-align: left;
+  border: 1px solid rgb(161, 160, 160);
+  border-radius: 8px;
+  background-color: #ffffff;
+}
+.sang-btt{
+  background-color: #4f4f4f;
+  color: #ffffff;
+  margin-left: 10px;
+  padding: 1% 2% 1% 2%;
+  border: 1px solid rgb(174, 174, 174);
+  
+}
+.sang-bttcon{
+  margin: 2% 0 0 0%;
+}
