--- a/src/css/MyPage.css
+++ b/src/css/MyPage.css
@@ -1,4 +1,4 @@
-/* body {
+body {
     background-color: whitesmoke;
     width: 1600px;
     height: 1000px;
@@ -70,4 +70,3 @@
     margin-top: 30px;
     border-bottom: 1px solid whitesmoke;
   }
-*/
