--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,64 +1,113 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .main-container {
-  text-align: center; 
-  margin-top: 2%; 
+  text-align: center;
+  margin: 0;
+  height: 100vh;
+}
+
+
+.image-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 .section-description {
-  margin-top: 2%; 
+  margin-top: 2%;
   margin-bottom: 1%;
 }
 
-.button-container {
-  margin-top: 2%; 
-
+.main-bttcontainer {
+  margin-top: 2%;
 }
+
 .mainbtt {
   background-color: #ffffff;
-  padding: 10px 5% 10px 5%; 
+  padding: 10px 5% 10px 5%;
   border: 1px solid #848383;
-  border-radius: 5px; 
+  border-radius: 5px;
   width: fit-content;
   margin: 0 auto;
 }
 
-.button-container button {
-  margin: 5px; 
-  padding: 10px 20px; 
-  font-size: 16px; 
-  border: 1px solid #ffffff; 
-  border-radius: 5px; 
+.main-bttcontainer button {
+  margin: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: 1px solid #ffffff;
+  border-radius: 5px;
   background-color: #ffffff;
-  cursor: pointer; 
+  cursor: pointer;
   color: black;
   font-weight: bold;
   font-size: 20px;
 }
 
-.button-container button:hover {
+.main-bttcontainer button:hover {
   color: #6b5e5e;
 }
-.button-container button.active {
 
+.main-bttcontainer button.active {
   color: #6b5e5e;
   border: 1px solid #ffffff;
 }
+
 .sul1 {
-  width: 80%; 
-  padding: 1% 10% 1% 10%; 
+  width: 80%;
+  padding: 1% 10% 1% 10%;
   background-color: rgb(240, 239, 239);
   color: rgb(0, 0, 0);
-  
-  margin: 0 auto; 
-  
-}
-.sul2 {
-  width: 39%; 
-  padding: 1% 10% 1% 10%; 
-  background-color: rgb(240, 239, 239);
-  color: rgb(0, 0, 0);
-  margin: 0 auto; 
-  
+  margin: 0 auto;
 }
 
-.sul11{
+.sul2 {
+  width: 39%;
+  padding: 1% 10% 1% 10%;
+  background-color: rgb(240, 239, 239);
+  color: rgb(0, 0, 0);
+  margin: 0 auto;
+}
+
+.sul11 {
   font-weight: bold;
+}
+
+@media only screen and (max-width: 768px) {
+  .main-container {
+    padding: 0 10px; /* 왼쪽과 오른쪽 여백을 줄입니다. */
+  }
+
+  .sul1, .sul2 {
+    width: 80%; /* 내용의 너비를 조정합니다. */
+    padding: 1% 5%; /* 내용의 패딩을 조정합니다. */
+  }
+
+  .mainbtt {
+    width: 80%; /* 버튼 컨테이너의 너비를 조정합니다. */
+    padding: 10px 2%; /* 버튼의 패딩을 조정합니다. */
+  }
+
+  .sul1,
+  .main-bttcontainer button {
+    font-size: 17px; /* 버튼의 폰트 크기를 조정합니다. */
+  }
+
+
+  .testsiz {
+    font-size: 20px; /* 버튼의 폰트 크기를 조정합니다. */
+  }
+  .mainmain{
+    padding-top: 60px;
+  }
 }
