--- a/src/css/MyPage.css
+++ b/src/css/MyPage.css
@@ -1,7 +1,7 @@
 body {
     background-color: whitesmoke;
-    width: 1600px;
-    height: 1000px;
+    width: 100%;
+    height: 100%;
 }
 .sidebar {
     position: relative;
