--- a/src/css/Section2.css
+++ b/src/css/Section2.css
@@ -41,25 +41,36 @@
   padding-bottom: 12px;
 }
 
-.input-container {
+.Section2-container {
   margin-bottom: 10px;
 }
 
-.input-field {
+.Section2-field {
+  margin-top: 3px;
   width: 450px;
   padding: 18px;
   height: 23px;
 }
 
+.select-field1{
+  padding:15px;
+  margin: 5px 0 10px 5px;
+  border-top-right-radius: 20px; 
+  border-bottom-right-radius: 20px; 
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border: 1px solid rgb(148, 148, 148);
+}
+
 .select-field {
-  padding:18px;
+  padding:15px;
 }
 
 .error-message {
   color: red;
 }
 
-.input-field,
+.Section2-field,
 .select-field {
   margin-right: 0px; /* 입력 칸과 셀렉트 박스 사이의 간격 조정 */
 }
@@ -96,7 +107,7 @@
 
 
 
-.input-field {
+.Section2-field {
   border-radius: 20px; 
   padding: 10px; 
   border: 1px solid #ccc; 
@@ -116,38 +127,6 @@
   border-bottom-left-radius: 20px;
 }
 
-.radio-container {
-  display: inline-block;
-  position: relative;
-  padding-left: 30px;
-  margin-right: 15px;
-}
-
-.radio-container input[type="radio"] + label:before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 2px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  border: 1px solid #aaa;
-  background-color: #fff;
-}
-
-.radio-container input[type="radio"]:checked + label:before {
-  background-color: #007bff; 
-}
-
-.radio-container label {
-  font-size: 15px;
-}
-
-.radio-container input[type="radio"]:checked + label {
-  color: #007bff; 
-}
-
-
 
 .next-button {
   background-color: rgb(189, 92, 92);
@@ -163,6 +142,72 @@
   margin-top: 20px;
 }
 
+
+
+
 /* .next-button:hover {
   background-color: rgb(189, 92, 92); /* 마우스 호버 시 배경색 변경 */
+
+/* 
+  .type-radio {
+   margin-bottom: 1%;
+   margin-left: 50%;
+   border: 1px solid #c1c0c0;
+   cursor: pointer;
+   width: 10px;
+   height: 10px;
+   border-radius: 8px;
+   padding: 20px;
+   font-size: 15px;
+   background-color:  #ffffff;
+   color: #9e9e9e;
+   font-weight: bold;
+  } */
+  
+  
+  .type-radio,
+  .gender-radio,
+  .gender-radio1{
+    border: 1px solid #c1c0c0;
+    border-radius: 8px;
+    font-size: 25px;
+    color: #2f2f2f;
+ 
+    background-color:  #ffffff;
+    width: 100px;
+    height: 40px;
+  }
+
+
+  .gender-radio input[type="radio"]:checked + label,
+  .type-radio input[type="radio"]:checked + label {
+    color: rgb(0, 0, 0); 
+    font-weight: bold;
+    font-size: 16px;
+  }
+
+.typeradio-container,  
+.genderradio-container{
+  display: flex;
+  gap: 300px;
+}
+
+.typeradio-container .type-radio,
+.genderradio-container .gender-radio,
+.genderradio-container .gender-radio1 {
+  margin-right: -990px; /* 원하는 간격으로 조정 */
+  margin-bottom: 10px;
+  margin-left: 700px;
+}
+
+
+
+
+/* 마우스 오버 시 클릭하는 모션 제공 */
+.typeradio-container .type-radio label,
+.genderradio-container .gender-radio label,
+.genderradio-container .gender-radio1 label {
+  cursor: pointer;
+  transition: background-color 0.3s ease; /* 배경색 변경에 대한 전환 효과 */
+}
 
