footer 및 mypage, content 수정

--- a/src/css/ChangePassword.css
+++ b/src/css/ChangePassword.css
@@ -1,18 +1,14 @@
-/* .changepw-container {
-    margin-top: -100px;
+.changepw-container {
     background-color: white;
-    width: 1200px;
-    height: 730px;
-    max-width: 1200px;
+    width: auto;
+    height: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     display: flex;
     justify-content: center; 
     align-items: center; 
     flex-direction: column;
-}
-.changepw-container strong {
-    margin-top: 30px;
+    margin-left: 5%;
 }
 
 .changepw-title strong {
@@ -23,7 +19,7 @@
 
 .changepw-context-container div {
     text-align: left;
-    margin-top: 30px;
+    margin-top: 50px;
     margin-bottom: 30px;
     margin-left: 50px;
     display: flex;
@@ -36,8 +32,9 @@
     font-size: small;
     height: 40px;
     cursor: pointer;
-    margin-top: 50px;
+    margin-top: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    margin-bottom: 40px;
 }
 
 .changepw-context-container button:active {
@@ -81,4 +78,4 @@
     }
 
  
-} */
+}
