--- a/src/css/Contents.css
+++ b/src/css/Contents.css
@@ -1,4 +1,10 @@
-/* .content-container {
+body {
+  background-color: whitesmoke;
+}
+.content-main {
+  padding-top: 100px;
+}
+.content-container {
     margin: 0 auto;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -6,7 +12,11 @@
     justify-content: center; 
     align-items: center; 
     flex-direction: column;
-    width: 1000px;
+    width: 90%;
+    height: auto;
+  }
+  .content-layout {
+    margin-top: 30px;
   }
   
   .content-box {
@@ -17,29 +27,43 @@
     .video-description-wrapper {
       display: flex;
       flex-direction: row;
-      margin-right: 20px;
-      margin-top: 50px;
-      border-bottom: 1px solid #ccc;
-      padding-bottom: 20px;
-      margin-left: 20px;
+      margin-top: 80px;
+      padding-bottom: 10%;
+      text-align: left;
+      
     }
     
     
     .video-box {
-      margin-left: 20px;
+      position: absolute;
+      width: 20%;
+      height: auto;
+      left: 10%;
       margin-bottom: 20px;
+    }
+    .video-box iframe {
+      width: 100%;
+      height: 15%;
     }
     
     .description-box {
-      margin-left: 20px;
-      margin-top: -10px;
+      position: relative;
+      padding-right: 10%;
+      margin-left: -10%;
     }
     .description-box a {
-      font-size: 30px;
+      position: relative;
+      font-size: 20px;
       font-weight: bold;
       color: black;
+      flex-wrap: wrap;
     }
-  
+
+    .description-box p {
+      text-overflow: ellipsis; 
+      font-size: 15px;
+    }
+    
     .description-box a:hover {
       color: gray;
     }
@@ -48,4 +72,7 @@
       .description-box p {
         display: none;
       }
-    } */
+      .description-box a {
+        display: none;
+      }
+    }
