--- a/src/css/EditProfile.css
+++ b/src/css/EditProfile.css
@@ -1,15 +1,14 @@
 .editprofile-container {
-    margin-top: -100px;
     background-color: white;
-    width: 1200px;
-    height: 730px;
-    max-width: 1200px;
+    width: auto;
+    height: 50vh;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
     display: flex;
     justify-content: center; 
     align-items: center; 
     flex-direction: column;
+    margin-left: 5%;
 }
 
 .editprofile-title strong {
@@ -17,14 +16,15 @@
     font-weight: bolder;
     display: block;
     text-align: center; 
+    padding: 0 30px;
 }
 
 .editprofile-context-container {
     display: flex;
     text-align: left;
     flex-direction: column;
-    align-items: center;
     margin-top: 70px;
+    padding: 0 30px;
 }
 
 .editprofile-context-container div {
@@ -32,7 +32,7 @@
     flex-direction: row;
     align-items: center;
     margin-bottom: 30px;
-    width: 80%;
+    width: 150%;
 }
 
 .editprofile-context-container div label {
@@ -54,7 +54,7 @@
     width: 350px;
     text-align: center;
     font-size: small;
-    height: 40px;
+    height: 100%;
     cursor: pointer;
     margin-top: 50px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
