--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,14 +1,7 @@
-
-html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
-#root {
+/* #root {
   width: 100%;
   height: 100%;
-}
+} */
 
 .header-container {
   position: fixed; 
@@ -62,7 +55,7 @@ nav li {
 
 .logo img {
   width: 50px;
-  height: auto;
+  height: 50px;
 }
 
 @media (max-width: 960px) {
@@ -96,10 +89,11 @@ nav li {
 
 
 .auth-buttons button {
-  background-color: #ffffff;
+  background-color: transparent;
   border-radius: 15px;
   font-size: 13px;
-  border: 1px solid #d1d1d1;
+  color: white;
+  border: none;
 }
 
 .dropdown-overlay {
