--- a/src/css/MyInfo.css
+++ b/src/css/MyInfo.css
@@ -1,14 +1,13 @@
  .myinfo-container {
-     margin-top: -100px;
      background-color: white;
-     width: 1200px;
-     height: 730px;
-     max-width: 1200px;
+     width: auto;
+     height: auto;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+     margin-left: 5%;
  }
 
  @media only screen and (max-width: 1100px) {
