--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -19,11 +19,14 @@
   h2 {
     text-align: center;
   }
-
+  .login-layout{
+    margin-top: 10%;
+  }
   .row {
     display: flex;
     justify-content: center;
-    margin-left: 39%;
+    margin-left: 38%;
+    
   }
   
   .login-box {
@@ -92,3 +95,28 @@
     padding-left: 10px;
   }
   
+  @media only screen and (max-width: 768px) {
+    .login-box {
+      width: 80%;
+      padding: 30px;
+    }
+  }
+  
+  @media only screen and (max-width: 576px) {
+    .login-box {
+      width: 90%;
+      padding: 25px;
+      margin-left: -35%;
+    }
+  
+    .btn-primary {
+      margin-left: 0;
+    }
+
+    .login-layout{
+      margin-top: 30%;
+    }
+    .findPd{
+      
+    }
+  }
