--- a/src/css/Page3.css
+++ b/src/css/Page3.css
@@ -62,3 +62,33 @@
   
 
   
+  @media only screen and (max-width: 600px) {
+   
+    .aaaaaa{
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
+    .qnaplus {
+      
+      margin-left: 0px;
+      margin-top: 250px;
+      margin-right: auto;
+      width: 40%;
+    }
+  
+    .form-group input,
+    .form-group1 textarea {
+      font-size: 14px; 
+    }
+  
+    .button-group {
+      flex-direction: column; 
+      align-items: center;
+    }
+  
+    .cancel-button,
+    .save-button {
+      width: 100%; 
+      margin-bottom: -17px;
+    }
+  }
