--- a/src/css/Page5.css
+++ b/src/css/Page5.css
@@ -2,10 +2,10 @@
     margin-bottom: 20px;
     width: 33%;
     padding-top: 10px;
-    margin-left: 800px;
+    margin-left: 45%;
 
   }
-  
+
   .faq-question,
   .faq-answer {
     border: 1px solid #ccc;
@@ -25,4 +25,19 @@
   .faq-answer.visible {
     display: block;
   }
-  
+  @media only screen and (max-width: 600px) {
+   
+    .faq-item{
+      font-size: 10px;
+      margin-left: 24%;
+      width: 270px;
+    }
+  }
+  @media only screen and (max-width: 300px) {
+   
+    .faq-item{
+      font-size: 10px;
+      margin-left: 0%;
+      width: 270px;
+    }
+  }
