--- a/src/css/Section2.css
+++ b/src/css/Section2.css
@@ -72,11 +72,11 @@
 
 .Section2-field,
 .select-field {
-  margin-right: 0px; /* 입력 칸과 셀렉트 박스 사이의 간격 조정 */
+  margin-right: 0px;
 }
 
 .select-field {
-  margin-left: 5px; /* 셀렉트 박스와 다음 요소 사이의 간격 조정 */
+  margin-left: 5px; 
 }
 
 /**/
@@ -146,7 +146,7 @@
 
 
 /* .next-button:hover {
-  background-color: rgb(189, 92, 92); /* 마우스 호버 시 배경색 변경 */
+  background-color: rgb(189, 92, 92); 
 
 /* 
   .type-radio {
@@ -164,7 +164,7 @@
    font-weight: bold;
   } */
   
-  
+  .type-radio1,
   .type-radio,
   .gender-radio,
   .gender-radio1{
@@ -177,8 +177,19 @@
     width: 100px;
     height: 40px;
   }
-
-
+.typeradio-container,
+.genderradio-container{
+  display: flex;
+}
+.type-radio1,
+.gender-radio1{
+  
+  margin-left: 44%;
+}
+.type-radio,
+.gender-radio{
+  margin-left: -42%;
+}
   .gender-radio input[type="radio"]:checked + label,
   .type-radio input[type="radio"]:checked + label {
     color: rgb(0, 0, 0); 
@@ -186,28 +197,82 @@
     font-size: 16px;
   }
 
-.typeradio-container,  
-.genderradio-container{
-  display: flex;
-  gap: 300px;
+
+
+@media only screen and (max-width: 600px) {
+  .gender-radio, .type-radio {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .gender-radio label, .type-radio label {
+    display: inline-block;
+    margin-right: 10px;
+  }
 }
 
-.typeradio-container .type-radio,
-.genderradio-container .gender-radio,
-.genderradio-container .gender-radio1 {
-  margin-right: -990px; /* 원하는 간격으로 조정 */
-  margin-bottom: 10px;
-  margin-left: 700px;
+
+@media only screen and (max-width: 830px) {
+  .type-radio1,
+  .gender-radio1{
+    
+    margin-left: 300px;
+  }
+  .type-radio,
+  .gender-radio{
+    margin-left: -30%;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .type-radio1,
+  .gender-radio1{
+    
+    margin-left: 170px;
+    font-size: 22px;
+  }
+  .type-radio,
+  .gender-radio{
+    margin-left: -30%;
+    font-size: 22px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .type-radio1,
+  .gender-radio1{
+    
+    margin-left: 30px;
+    font-size: 22px;
+  }
+  .type-radio,
+  .gender-radio{
+    margin-left: -15%;
+    font-size: 22px;
+  }
 }
 
-
-
-
-/* 마우스 오버 시 클릭하는 모션 제공 */
-.typeradio-container .type-radio label,
-.genderradio-container .gender-radio label,
-.genderradio-container .gender-radio1 label {
-  cursor: pointer;
-  transition: background-color 0.3s ease; /* 배경색 변경에 대한 전환 효과 */
+@media only screen and (max-width: 480px) {
+  .type-radio1,
+  .gender-radio1{
+    
+    margin-left: 30px;
+    font-size: 22px;
+  }
+  .type-radio,
+  .gender-radio{
+    margin-left: -15%;
+    font-size: 22px;
+  }
 }
-
+@media only screen and (max-width: 250px) {
+  .type-radio1,
+  .gender-radio1{
+    
+    margin-left: -10px;
+    font-size: 22px;
+  }
+  .type-radio,
+  .gender-radio{
+    margin-left: 1%;
+    font-size: 22px;
+  }
+}
