--- a/src/css/MyPage.css
+++ b/src/css/MyPage.css
@@ -6,7 +6,7 @@
     position: absolute;
     float: left;
     background-color: #1877F2;
-    height: 100vh !important;
+    height: 60vh !important;
     width: 250px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
     opacity: 0.9;
@@ -19,8 +19,8 @@
     text-align: left; 
     margin-top: 50px;
     user-select: none;
-    margin-bottom: 70px;
-    margin-left: 20px;
+    margin-bottom: 30px;
+    margin-left: 40px;
   }
   .sidebar-menu li span{
     margin-left: 20px;
@@ -80,3 +80,87 @@
     border-bottom: 1px solid whitesmoke;
     opacity: 0.3;
   }
+
+/* 폰 사이즈일 때 스타일 */
+@media screen and (max-width: 768px) {
+  .logo-container{
+    margin-top: 5px;
+  }
+  .sidebar-title{
+    margin-top: 10px;
+  }
+
+  .sidebar {
+    
+    position: absolute;
+    float: left;
+    background-color: #1877F2;
+    height: 37vh !important;
+    width: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+    opacity: 0.9;
+
+  }
+
+  .sidebar-menu li span {
+    margin-left: 0;
+    display: block; 
+    padding: 10px; 
+  }
+
+  .sidebar ul li {
+    margin-top: 10px; 
+  }
+
+  .sidebar ul li:hover {
+    color: white;
+  }
+
+  .content {
+    margin-left: -40px;
+    float: none;
+    margin-top: 0;
+    padding: 10px; 
+    width: 100%;
+  }
+
+  .sidebar-title h2 {
+    height: 0px;
+    margin-top: 0; 
+    margin-bottom: 10px;
+    font-size: small; 
+  }
+
+  .logo-container {
+    margin-left: 0;
+    margin-top: 10px; 
+    margin-bottom: 10px; 
+  }
+
+  .logo-container img {
+    width: 20px; 
+    height: 20px;
+  }
+
+  .logo-container span {
+    font-size: small; 
+  }
+
+  .logo-bottombar p {
+    margin-top: 10px; 
+  }
+
+  .mypage {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+  }
+
+  .sidebar {
+    order: 1;
+  }
+
+  .content {
+    order: 2; 
+  }
+}
