--- a/src/css/ChangePassword.css
+++ b/src/css/ChangePassword.css
@@ -1,6 +1,6 @@
 .changepw-container {
     background-color: white;
-    width: auto;
+    width: 40%;
     height: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -9,6 +9,8 @@
     align-items: center; 
     flex-direction: column;
     margin-left: 5%;
+    margin-top: -100px;
+    padding: 5%;
 }
 
 .changepw-title strong {
@@ -27,12 +29,12 @@
 }
 
 .changepw-context-container button {
-    width: 350px;
+    width: 30%;
     text-align: center;
     font-size: small;
     height: 40px;
     cursor: pointer;
-    margin-top: 40px;
+    margin-top: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     margin-bottom: 40px;
 }
@@ -52,7 +54,7 @@
 }
 
 .changepw-context-container input {
-    width: 500px; 
+    width: 300px; 
     height: 50px;
     margin-top: -50px;
     margin-right: 30px;
@@ -70,12 +72,24 @@
 @media only screen and (max-width: 1100px) {
     .changepw-container {
         width: 130%;
+        margin-top: 10px;
     }
-
+    .changepw-title{
+        width: 100%;
+        height: 0;
+    }
     .changepw-context-container input {
         width: 100%;
         margin-right: 0;
     }
-
- 
+    .changepw-title strong{
+        font-size: 20px;
+        margin-left: -10%;
+    }
+    .changepw-notification {
+        text-align: center;
+        font-size: 12px;
+        margin-top: 60px;
+        margin-bottom: 70px;
+    }
 }
