--- a/src/css/EditProfile.css
+++ b/src/css/EditProfile.css
@@ -1,6 +1,6 @@
 .editprofile-container {
     background-color: white;
-    width: auto;
+    width: 55%;
     height: 50vh;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -51,12 +51,13 @@
 }
 
 .editprofile-context-container button {
-    width: 350px;
+    width: 30%;
     text-align: center;
     font-size: small;
     height: 100%;
     cursor: pointer;
-    margin-top: 50px;
+    margin-top: 20px;
+    margin-left: 60%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 
@@ -82,5 +83,10 @@
     .editprofile-context-container div select, 
     .editprofile-context-container div input {
         width: 55%;
+    }
+    .editprofile-title strong{
+        font-size: 26px;
+        width: 100%;
+        margin-left: 10%;
     }
 }
