--- a/src/css/Cms.css
+++ b/src/css/Cms.css
@@ -1,17 +1,37 @@
 .cms-container {
   display: flex;
   flex-direction: column;
+  
 }
 .sidebar {
   position: relative;
   float: left;
   background-color: #1877F2;
-  margin-top: -120px;
+  margin-top: 0px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
   opacity: 0.9;
-  height: 2000px;
+  height: 100px;
+}
+.sidebar ul li{
+  font-size: 20px;
+  font-weight: bold;
+  
+}
+.sidebar ul li.cms-active a {
+  color: #000000; 
 }
 
+
+
+.sidebar ul li a{
+  color: white;
+  margin-left: 15%;
+}
+.sidebar ul li a:hover{
+  color: rgb(0, 0, 0);
+  margin-left: 15%;
+  font-weight: bold;
+}
 .sidebar-title h2 {
   color: white;
   font-size: xx-large;
@@ -56,8 +76,8 @@ th:last-child {
 
 .Cmss-content{
   margin: 2.5% auto 10px; 
-  width: 80%;
-  margin-left: 53%;
+  width: 100%;
+ 
 }
 
 .Cmss-content th {
@@ -65,22 +85,21 @@ th:last-child {
   font-size: 1px; 
 }
 
-.Cmss-content td {
-  font-size: 20px; 
-  
-}
+
 
 
 .Cmss-content table {
+  margin-left: -40%; 
+  text-align: center;
   table-layout: fixed; 
   width: 100%;
   border-collapse: collapse; 
-  margin-left: -450px;
+  
 }
 
 .Cmss-content th,
 .Cmss-content td {
-  padding: 1px; 
+  padding: 0px; 
   text-align: center; 
   border: none; 
 }
@@ -89,9 +108,9 @@ th:last-child {
   background-color: #ffffff; 
 }
 
-
 .Cmss-content td {
   border-top: 1px solid #ddd; 
+  font-size: 20px; 
 }
 
 .Cmss-content tr:last-child td {
@@ -113,7 +132,7 @@ th:last-child {
   justify-content: center;
   align-items: center;
   margin-top: 25px;
-  margin-right: 80%;
+  margin-right: 115%;
 }
 
 .Cmss-pagebtt button {
@@ -223,3 +242,4 @@ th:last-child {
 .sang-bttcon{
   margin: 2% 0 0 0%;
 }
+
