--- a/src/css/Section2.css
+++ b/src/css/Section2.css
@@ -129,7 +129,7 @@
 
 
 .next-button {
-  background-color: rgb(189, 92, 92);
+  background-color:#1877F2;
   color: rgb(255, 255, 255); 
   border: none; 
   padding: 10px 20px; 
